# DESPLIEGUE-SERVICIO-SQL

./: .gitignore  2_modelo.ipynb  3_deployer.ipynb  4_API.ipynb  README.md  datos.csv  despliegue.ipynb  linear_regression_fecha_prediction.pkl  model.pkl  modelo.ipynb  modelo.pkl  pyproject.toml  recuperar_datos.ipynb  score.py
