[project]
name = "despliegue-servicio-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azureml>=0.2.7",
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pyodbc>=5.2.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
